--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "homepage": "https://github.com/elian-cheng/booking-events-graphql#readme",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0",
-    "mongoose": "^7.1.0"
+    "bcrypt": "^5.1.0",
+    "body-parser": "latest",
+    "express": "latest",
+    "express-graphql": "latest",
+    "graphql": "latest",
+    "mongoose": "latest"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
