--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "latest",
+    "dataloader": "^2.2.2",
     "express": "latest",
     "express-graphql": "latest",
     "graphql": "latest",
